--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^2.1.18",
     "morgan": "~1.7.0",
     "path": "^0.12.7",
+    "pdfmake": "^0.1.18",
     "serve-favicon": "~2.3.0"
   }
 }
