--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "morgan": "~1.7.0",
     "path": "^0.12.7",
     "pdfmake": "^0.1.18",
+    "pdfmake-browserified": "^0.1.4",
+    "phantom": "^2.1.10",
     "serve-favicon": "~2.3.0"
   }
 }
